pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingEmptyMultiLineStringDelimiterAtEof.pkl
// no newline after opening quote
res1 = """